# demo_cpp_cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: Doxygen.cmake
src/: CMakeLists.txt  calc.cpp  calc.hpp  main.cpp
test/: CMakeLists.txt  test_calc.cpp
